syntax = "proto3";

package example.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/getsynq/api/example/v1";


/**
  * Example is the core model of this package.
  */
message Example {
    // `id` is generated by the system when a new example is created.
    // It is required to refer to an example in any future operations (like update or remove).
    string id = 1;
    /* The example itself. */
    string text = 2;
    optional string description = 3; /// Optional description of the example.
    google.protobuf.Timestamp created_at = 4; /// Example creation time.
    google.protobuf.Timestamp updated_at = 5; /// Example last update time.
}
